@@ -2376,6 +2376,7 @@ Michael Ganz <michael_ganz at t-online dot de>
 Phillip LaBanca <labancap at ociweb dot com>
 <pkow88776 at onet dot pl>
 Journeyer J. Joh <oosaprogrammer at gmail dot com>
+Rudy Pot <rpot at aweta dot nl>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
